@@ -1,4 +1,2 @@
 # Be careful with wildcards to ensure we spot any ABI bump:
 usr/lib/*/libwayland-client.so.0*
-usr/lib/*/libwayland-cursor.so.0*
-usr/lib/*/libwayland-server.so.0*
