@@ -1,0 +1,2 @@
+# Be careful with wildcards to ensure we spot any ABI bump:
+usr/lib/*/libwayland-cursor.so.0*
