@@ -1,73 +1,4 @@
-libwayland-client.so.0 libwayland0 #MINVER#
- wl_array_add@Base 1.0.2
- wl_array_copy@Base 1.0.2
- wl_array_init@Base 1.0.2
- wl_array_release@Base 1.0.2
- wl_buffer_interface@Base 1.0.2
- wl_callback_interface@Base 1.0.2
- wl_compositor_interface@Base 1.0.2
- wl_data_device_interface@Base 1.0.2
- wl_data_device_manager_interface@Base 1.0.2
- wl_data_offer_interface@Base 1.0.2
- wl_data_source_interface@Base 1.0.2
- wl_display_connect@Base 1.0.2
- wl_display_connect_to_fd@Base 1.0.2
- wl_display_create_queue@Base 1.0.2
- wl_display_disconnect@Base 1.0.2
- wl_display_dispatch@Base 1.0.2
- wl_display_dispatch_pending@Base 1.0.2
- wl_display_dispatch_queue@Base 1.0.2
- wl_display_dispatch_queue_pending@Base 1.0.2
- wl_display_flush@Base 1.0.2
- wl_display_get_error@Base 1.0.2
- wl_display_get_fd@Base 1.0.2
- wl_display_interface@Base 1.0.2
- wl_display_roundtrip@Base 1.0.2
- wl_event_queue_destroy@Base 1.0.2
- wl_keyboard_interface@Base 1.0.2
- wl_list_empty@Base 1.0.2
- wl_list_init@Base 1.0.2
- wl_list_insert@Base 1.0.2
- wl_list_insert_list@Base 1.0.2
- wl_list_length@Base 1.0.2
- wl_list_remove@Base 1.0.2
- wl_log_set_handler_client@Base 1.0.2
- wl_map_for_each@Base 1.0.2
- wl_map_init@Base 1.0.2
- wl_map_insert_at@Base 1.0.2
- wl_map_insert_new@Base 1.0.2
- wl_map_lookup@Base 1.0.2
- wl_map_release@Base 1.0.2
- wl_map_remove@Base 1.0.2
- wl_map_reserve_new@Base 1.0.2
- wl_output_interface@Base 1.0.2
- wl_pointer_interface@Base 1.0.2
- wl_proxy_add_listener@Base 1.0.2
- wl_proxy_create@Base 1.0.2
- wl_proxy_destroy@Base 1.0.2
- wl_proxy_get_id@Base 1.0.2
- wl_proxy_get_user_data@Base 1.0.2
- wl_proxy_marshal@Base 1.0.2
- wl_proxy_set_queue@Base 1.0.2
- wl_proxy_set_user_data@Base 1.0.2
- wl_region_interface@Base 1.0.2
- wl_registry_interface@Base 1.0.2
- wl_seat_interface@Base 1.0.2
- wl_shell_interface@Base 1.0.2
- wl_shell_surface_interface@Base 1.0.2
- wl_shm_interface@Base 1.0.2
- wl_shm_pool_interface@Base 1.0.2
- wl_surface_interface@Base 1.0.2
- wl_touch_interface@Base 1.0.2
-
-libwayland-cursor.so.0 libwayland0 #MINVER#
- wl_cursor_frame@Base 1.0.2
- wl_cursor_image_get_buffer@Base 1.0.2
- wl_cursor_theme_destroy@Base 1.0.2
- wl_cursor_theme_get_cursor@Base 1.0.2
- wl_cursor_theme_load@Base 1.0.2
-
-libwayland-server.so.0 libwayland0 #MINVER#
+libwayland-server.so.0 libwayland-server0 #MINVER#
  wl_array_add@Base 1.0.2
  wl_array_copy@Base 1.0.2
  wl_array_init@Base 1.0.2
