@@ -1,7 +1,6 @@
 #!/usr/bin/make -f
 
 SOURCE=wayland
-PACKAGE=libwayland0
 
 # Kill *.la files, and forget no-one:
 override_dh_install:
@@ -9,11 +8,19 @@ override_dh_install:
 	dh_install --fail-missing
 
 override_dh_makeshlibs:
-	dh_makeshlibs -V '$(PACKAGE) (>= 1.0.4)' -- -c4
+	dh_makeshlibs -plibwayland-client0 \
+		-V 'libwayland-client0 (>= 1.0.4)' -- -c4
+	dh_makeshlibs -plibwayland-cursor0 \
+		-V 'libwayland-cursor0 (>= 1.0.4)' -- -c4
+	dh_makeshlibs -plibwayland-server0 \
+		-V 'libwayland-server0 (>= 1.0.4)' -- -c4
 
 # Debug package:
 override_dh_strip:
-	dh_strip --dbg-package=$(PACKAGE)-dbg
+	dh_strip -plibwayland-client0 --dbg-package=libwayland-client0-dbg
+	dh_strip -plibwayland-cursor0 --dbg-package=libwayland-cursor0-dbg
+	dh_strip -plibwayland-server0 --dbg-package=libwayland-server0-dbg
+	dh_strip -a --remaining-packages
 
 override_dh_auto_test:
 	# the test suite does not pass completely in headless mode
