@@ -29,6 +29,9 @@ wayland (1.0.5-1) UNRELEASED; urgency=low
   * Add Homepage field to debian/control.
   * Update debian/copyright.
 
+  [ Emilio Pozuelo Monfort ]
+  * Split the shared libraries into separate packages.
+
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 16 Aug 2012 13:04:41 +0300
 
 wayland (0.85.0-2) unstable; urgency=low
